src/snapshots/ruff__linter__tests__YTT102_YTT102.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SysVersion2Referenced
  location:
    row: 4
    column: 11
  end_location:
    row: 4
    column: 22
  fix: ~
- kind: SysVersion2Referenced
  location:
    row: 5
    column: 11
  end_location:
    row: 5
    column: 18
  fix: ~

