src/snapshots/ruff__linter__tests__YTT201_YTT201.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SysVersionInfo0Eq3Referenced
  location:
    row: 7
    column: 6
  end_location:
    row: 7
    column: 25
  fix: ~
- kind: SysVersionInfo0Eq3Referenced
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 21
  fix: ~
- kind: SysVersionInfo0Eq3Referenced
  location:
    row: 9
    column: 6
  end_location:
    row: 9
    column: 25
  fix: ~
- kind: SysVersionInfo0Eq3Referenced
  location:
    row: 10
    column: 6
  end_location:
    row: 10
    column: 21
  fix: ~

