src/snapshots/ruff__linter__tests__YTT202_YTT202.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SixPY3Referenced
  location:
    row: 4
    column: 3
  end_location:
    row: 4
    column: 10
  fix: ~
- kind: SixPY3Referenced
  location:
    row: 6
    column: 3
  end_location:
    row: 6
    column: 6
  fix: ~

