src/snapshots/ruff__linter__tests__YTT203_YTT203.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SysVersionInfo1CmpInt
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix: ~
- kind: SysVersionInfo1CmpInt
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 15
  fix: ~

