src/snapshots/ruff__linter__tests__YTT204_YTT204.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SysVersionInfoMinorCmpInt
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 22
  fix: ~
- kind: SysVersionInfoMinorCmpInt
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 18
  fix: ~

