src/snapshots/ruff__linter__tests__YTT302_YTT302.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SysVersionCmpStr10
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 7
  fix: ~
- kind: SysVersionCmpStr10
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 11
  fix: ~
- kind: SysVersionCmpStr10
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 11
  fix: ~
- kind: SysVersionCmpStr10
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 11
  fix: ~
- kind: SysVersionCmpStr10
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 11
  fix: ~

