src/snapshots/ruff__linter__tests__a001.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    BuiltinVariableShadowing:
      - temp
  location:
    row: 5
    column: 89
  fix: ~
