src/snapshots/ruff__linter__tests__a002.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    BuiltinArgumentShadowing:
      - temp
  location:
    row: 5
    column: 89
  fix: ~
