src/snapshots/ruff__linter__tests__a003.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    BuiltinAttributehadowing:
      - temp
  location:
    row: 5
    column: 89
  fix: ~
